--- a/week5/styles.css
+++ b/week5/styles.css
@@ -9,6 +9,12 @@ body {
     font-family: courier;
 }
 
+#hacker_text {
+    color: rgb(54, 218, 54);
+    font-size: 5rem;
+    font-family: courier;
+}
+
 h1, h2 {
     text-decoration: underline;
     background-color: rgba(0, 0, 0, 0.7);
