--- a/week5/styles.css
+++ b/week5/styles.css
@@ -9,10 +9,22 @@ body {
     font-family: courier;
 }
 
-#hacker_text {
+.first_page {
+    margin-top: auto;
+    margin-bottom: auto;
+
+}
+
+.big_font {
+    font-size: 3rem;
+    margin: auto;
+}
+
+.hacker_text {
     color: rgb(54, 218, 54);
     font-size: 5rem;
     font-family: courier;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 h1, h2 {
