--- a/week5/styles.css
+++ b/week5/styles.css
@@ -9,6 +9,24 @@ body {
     font-family: courier;
 }
 
+.index_button {
+    background-color: rgb(54, 218, 54);
+    margin: 10px;
+    width: 20%;
+    height: 13%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.index_button a {
+    color: black;
+    text-decoration: none;
+}
+
+.index_tab {
+    display: flex;
+}
+
 .button {
     background-color: rgb(54, 218, 54);
     font-size: 2rem;
@@ -25,6 +43,7 @@ body {
     color: black;
     text-decoration: none;
 }
+
 
 .first_page {
     display: flex;
