--- a/week8/styles.css
+++ b/week8/styles.css
@@ -8,6 +8,7 @@ body {
     color: rgb(54, 218, 54);
     font-family: courier;
 }
+.error {color: #FF0000;}
 
 .index_button {
     background-color: rgb(54, 218, 54);
